# wiregui

./: ARAVT FTS Harness test.RO  Aggregate.ro  Example.tb  Ground List.ro  LICENCE.txt  README.md  Tables.ro  Unused Pin List.ro  Wire List.ro  app.py  build_dmg.sh  checking.tb  config.yaml  data.tb  environment.yaml  ground.csv  ground.ro  isolated.csv  isolated.ro  kk.py  klkl.tb  left_panel.py  list_view_model.py  main_view_model.py  new_project.tb  nexport.spec  ok.md  panel_view_model.py  playground.ipynb  pyproject.toml  right_panel.py  schematic_view_model.py  schematic_views.py  something.tb  start.py  start.spec  table_views.py  testing.ipynb  testing.tb  utils.py  (+2 more)
documents/: Ground List.csv  Tables.ro  Unused Pin List.csv  new_project.tb
nexport/: run.py
nexport.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
nexport/model/: pandas_model.py
nexport/utils/: config.yaml  utils.py
nexport/view_models/: list_view_model.py  main_view_model.py  panel_view_model.py  schematic_view_model.py
nexport/views/: app.py  left_panel.py  main.py  right_panel.py  schematic_views.py  table_views.py
ok/: Aggregate.ro  Wire List.csv
